@@ -49,13 +49,6 @@ See http://forrest.apache.org/docs/linking.html for more info
     <udf label="UDFs" href="udf.html" />
     </docs>  
     
-     <docs label="Pig Miscellaneous"> 
-     <api	label="API Docs" href="ext:api"/>
-     <wiki  label="Wiki" href="ext:wiki" />
-     <faq  label="FAQ" href="ext:faq" />
-     <relnotes  label="Release Notes" 	href="ext:relnotes" />
-    </docs>
-
     <docs label="Zebra"> 
      <zover label="Zebra Overview "	href="zebra_overview.html" />
      <zusers label="Zebra Users "	href="zebra_users.html" />
@@ -65,7 +58,7 @@ See http://forrest.apache.org/docs/linking.html for more info
      <zstream label="Zebra Streaming "	href="zebra_stream.html" />
     </docs>
      <docs label="Miscellaneous"> 
-     <api	label="API Docs"					href="ext:api"/>
+     <api	label="API Docs"					href="api/"/>
      <wiki  label="Wiki"               			href="ext:wiki" />
      <faq  label="FAQ"                			href="ext:faq" />
      <relnotes  label="Release Notes" 	href="ext:relnotes" />
