@@ -68,6 +68,8 @@ manner (rding via pradeepkth)
 
 IMPROVEMENTS
 
+PIG-1384: Adding contrib javadoc to main Pig javadoc (daijy)
+
 PIG-1320: final documentation updates for Pig 0.7.0 (chandec via olgan)
 
 PIG-1330: Move pruned schema tracking logic from LoadFunc to core code (daijy)
